--- a/app/src/main/res/layout/activity_money.xml
+++ b/app/src/main/res/layout/activity_money.xml
@@ -23,19 +23,14 @@
                 android:id="@+id/date"
                 android:layout_width="350dp"
                 android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="date"
                 android:textSize="30sp" />
 
             <Button
                 android:id="@+id/money_calendar"
-                android:layout_width="38dp"
-                android:layout_height="40dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
+                android:layout_width="57dp"
+                android:layout_height="53dp"
                 android:background="@drawable/tab_main_calendar"
                 android:textColor="#E87D75" />
 
@@ -43,7 +38,7 @@
         </LinearLayout>
 
         <ListView
-            android:id="@+id/account"
+            android:id="@+id/accountlist"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="7"
@@ -62,9 +57,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="#9EF9EF"
-            android:inputType="text"
+            android:background="@drawable/rect_money"
             android:hint="what?"
+            android:gravity="center_horizontal|center_vertical"
+            android:inputType="text"
             android:textSize="20dp" />
 
         <EditText
@@ -72,16 +68,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="#9EF9EF"
+            android:background="@drawable/rect_money"
             android:hint="how much?"
+            android:gravity="center_horizontal|center_vertical"
             android:inputType="number"
             android:textSize="20sp" />
 
         <Button
+            android:id="@+id/plus"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5"
-            android:background="#8FFAEB"
+            android:background="@drawable/rect_money"
             android:onClick="OnClick_addButton"
             android:text="+"
             android:textColor="#000000"
@@ -99,10 +97,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="#8FFAEB"
+            android:background="@drawable/rect_money"
             android:gravity="center_vertical|right"
             android:text="Total : "
-            android:textSize="20dp" />
+            android:textSize="30dp" />
 
         <TextView
             android:id="@+id/total_sum"
@@ -110,10 +108,46 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:background="#8FFAEB"
+            android:background="@drawable/rect_money"
             android:gravity="right|center_vertical"
             android:hint="0"
-            android:textSize="23sp" />
+            android:textSize="30sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/calendar"
+            app:itemIconTint="@android:color/holo_purple"
+            app:itemTextColor="#9C27B0" />
+
+        <Button
+            android:id="@+id/kg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/tab_main_kg" />
+
+        <Button
+            android:id="@+id/account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/color_account" />
+
+        <Button
+            android:id="@+id/puppy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/tab_main_puppy" />
     </LinearLayout>
 
 </LinearLayout>
