--- a/app/src/main/res/layout/fragment_calendar_detail.xml
+++ b/app/src/main/res/layout/fragment_calendar_detail.xml
@@ -1,77 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/view_calendardetail"
-        android:layout_width="300dp"
-        android:layout_height="500dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="600dp">
 
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_memo"
-        app:layout_constraintEnd_toEndOf="@+id/view_calendardetail"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="@+id/view_calendardetail"
-        app:layout_constraintTop_toTopOf="@+id/view_calendardetail"
-        app:layout_constraintVertical_bias="0.5" />
+        <TextView
+            android:id="@+id/tv_showdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/waterdrop_detail"
+            app:layout_constraintHorizontal_bias="0.366"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.102" />
 
-    <Button
-        android:id="@+id/waterdrop_detail"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/waterdrop"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_memo"
-        app:layout_constraintEnd_toEndOf="@+id/view_calendardetail"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toEndOf="@+id/tv_date"
-        app:layout_constraintTop_toTopOf="@+id/view_calendardetail"
-        app:layout_constraintVertical_bias="0.5" />
+        <Button
+            android:id="@+id/waterdrop_detail"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/waterdrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/injection_detail"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1" />
 
-    <Button
-        android:id="@+id/injection_detail"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/injection"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_memo"
-        app:layout_constraintEnd_toEndOf="@+id/view_calendardetail"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toEndOf="@+id/waterdrop_detail"
-        app:layout_constraintTop_toTopOf="@+id/view_calendardetail" />
+        <Button
+            android:id="@+id/waterdrop_color"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/waterdrop_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/injection_detail"
+            app:layout_constraintHorizontal_bias="0.945"
+            app:layout_constraintStart_toEndOf="@+id/tv_showdate"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1" />
 
-    <EditText
-        android:id="@+id/edittext_memo"
-        android:layout_width="270dp"
-        android:layout_height="200dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:hint="                        memo"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="@+id/view_calendardetail"
-        app:layout_constraintEnd_toEndOf="@+id/view_calendardetail"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/view_calendardetail"
-        app:layout_constraintTop_toTopOf="@+id/view_calendardetail"
-        app:layout_constraintVertical_bias="0.2" />
+        <Button
+            android:id="@+id/injection_detail"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
+            android:background="@drawable/injection"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1" />
 
-    <ImageView
-        android:id="@+id/image_upload"
-        android:layout_width="270dp"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view_calendardetail"
-        app:layout_constraintEnd_toEndOf="@+id/view_calendardetail"
-        app:layout_constraintStart_toStartOf="@+id/view_calendardetail"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_memo"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
+        <Button
+            android:id="@+id/injection_color"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/injection_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.09"
+            app:layout_constraintStart_toEndOf="@+id/waterdrop_detail"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.1" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:id="@+id/edittext_memo"
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:gravity="start|top"
+            android:hint="                     memo"
+            android:inputType="textMultiLine"
+            app:layout_constraintBottom_toTopOf="@+id/image_upload"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.50"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <ImageView
+            android:id="@+id/image_upload"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
+            android:layout_marginBottom="180dp"
+            android:background="#E8E8E8"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.50"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btn_canceldetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="#FFFFFF"
+            android:text="취소"
+            app:layout_constraintEnd_toStartOf="@+id/btn_savedetail"
+            app:layout_constraintHorizontal_bias="0.516"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_upload" />
+
+        <Button
+            android:id="@+id/btn_savedetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
+            android:background="#FF7777"
+            android:text="저장"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_upload" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
