--- a/app/src/main/res/layout/activity_kg.xml
+++ b/app/src/main/res/layout/activity_kg.xml
@@ -7,15 +7,43 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <TextView
-        android:id="@+id/graph_date"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="8"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="@string/date"
-        android:textSize="30sp" />
+        android:layout_height="70dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/previous"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/left_arrow"
+            android:gravity="center_horizontal|center_vertical" />
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="3"
+            android:gravity="center_horizontal|center_vertical"
+            android:textColor="#555555"
+            android:textIsSelectable="false"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/next"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/right_arrow"
+            android:gravity="center" />
+
+
+
+
+    </LinearLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,8 +53,8 @@
 
         <LinearLayout
             android:id="@+id/linearLayout2"
-            android:layout_width="41dp"
-            android:layout_height="653dp"
+            android:layout_width="52dp"
+            android:layout_height="605dp"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -34,14 +62,13 @@
             <Button
                 android:id="@+id/blank"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="10dp"
                 android:background="@drawable/rect_kg_box"
                 android:textSize="15sp" />
-
             <Button
                 android:id="@+id/jan"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="38dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Jan"
                 android:textSize="15sp" />
@@ -49,7 +76,7 @@
             <Button
                 android:id="@+id/feb"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="34dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Feb"
                 android:textSize="15sp" />
@@ -57,7 +84,7 @@
             <Button
                 android:id="@+id/mar"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Mar"
                 android:textSize="15sp" />
@@ -65,7 +92,7 @@
             <Button
                 android:id="@+id/apr"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Apr"
                 android:textSize="15sp" />
@@ -73,7 +100,7 @@
             <Button
                 android:id="@+id/may"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="May"
                 android:textSize="15sp" />
@@ -81,7 +108,7 @@
             <Button
                 android:id="@+id/jun"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Jun"
                 android:textSize="15sp" />
@@ -89,7 +116,7 @@
             <Button
                 android:id="@+id/jul"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="33dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Jul"
                 android:textSize="15sp" />
@@ -97,7 +124,7 @@
             <Button
                 android:id="@+id/aug"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Aug"
                 android:textSize="15sp" />
@@ -105,7 +132,7 @@
             <Button
                 android:id="@+id/sep"
                 android:layout_width="match_parent"
-                android:layout_height="39dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Sep"
                 android:textSize="15sp" />
@@ -113,7 +140,7 @@
             <Button
                 android:id="@+id/oct"
                 android:layout_width="match_parent"
-                android:layout_height="39dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Oct"
                 android:textSize="15sp" />
@@ -121,7 +148,7 @@
             <Button
                 android:id="@+id/nov"
                 android:layout_width="match_parent"
-                android:layout_height="39dp"
+                android:layout_height="32dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Nov"
                 android:textSize="15sp" />
@@ -129,7 +156,7 @@
             <Button
                 android:id="@+id/dec"
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="33dp"
                 android:background="@drawable/rect_kg_box"
                 android:text="Dec"
                 android:textSize="15sp" />
@@ -140,12 +167,13 @@
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/chart"
             android:layout_width="434dp"
-            android:layout_height="535dp"
+            android:layout_height="469dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
