--- a/app/src/main/res/layout/activity_money.xml
+++ b/app/src/main/res/layout/activity_money.xml
@@ -57,9 +57,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@drawable/rect_money"
-            android:hint="what?"
+            android:background="#F6BBCF"
             android:gravity="center_horizontal|center_vertical"
+            android:hint="what?"
+            android:textColorHint="#FFFF"
             android:inputType="text"
             android:textSize="20dp" />
 
@@ -68,8 +69,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@drawable/rect_money"
+            android:background="#F6BBCF"
             android:hint="how much?"
+            android:textColorHint="#FFFF"
             android:gravity="center_horizontal|center_vertical"
             android:inputType="number"
             android:textSize="20sp" />
@@ -79,10 +81,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5"
-            android:background="@drawable/rect_money"
+            android:background="@drawable/rect_kg_box"
             android:onClick="OnClick_addButton"
             android:text="+"
-            android:textColor="#000000"
+            android:textColor="#E6285B"
             android:textSize="30sp" />
 
     </LinearLayout>
@@ -97,9 +99,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@drawable/rect_money"
+            android:background="#F6BBCF"
             android:gravity="center_vertical|right"
             android:text="Total : "
+            android:textColor="#FFFF"
             android:textSize="30dp" />
 
         <TextView
@@ -108,9 +111,10 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:background="@drawable/rect_money"
+            android:background="#F6BBCF"
             android:gravity="right|center_vertical"
             android:hint="0"
+            android:textColor="#FFFF"
             android:textSize="30sp" />
     </LinearLayout>
 
