--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -12,9 +12,9 @@
         <Button
             android:id="@+id/previous"
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
             android:layout_weight="1"
-            android:background="@drawable/left_arrow"
+            android:background="@drawable/left"
             android:gravity="center_horizontal|center_vertical" />
 
         <TextView
@@ -32,9 +32,9 @@
         <Button
             android:id="@+id/next"
             android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_height="25dp"
             android:layout_weight="1"
-            android:background="@drawable/right_arrow"
+            android:background="@drawable/right"
             android:gravity="center" />
 
 
@@ -46,7 +46,7 @@
         android:id="@+id/tv_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="⠀ 일ㅤ⠀ 월⠀⠀⠀ㅤ화⠀⠀⠀ㅤ수⠀⠀⠀ㅤ목⠀⠀⠀ㅤ금⠀⠀⠀ㅤ토"
+        android:text="⠀    일ㅤ⠀    월⠀⠀⠀ㅤ화⠀⠀⠀ㅤ수⠀⠀⠀ㅤ목⠀⠀⠀ㅤ금⠀⠀⠀ㅤ토"
         android:textSize="15sp" />
 
     <GridView
